[project]
name = "ComfyUI"
version = "0.3.12"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.11",
    "einops>=0.8.0",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow>=11.1.0",
    "psutil>=6.1.1",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.0",
    "spandrel>=0.4.1",
    "tokenizers>=0.13.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchsde>=0.2.6",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
